--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: son
-  password: 123456
+  username: <%= ENV.fetch('DATABASE_USER_NAME') %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD') %>
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("DB_MAX_THREADS") { 5 } %>
@@ -81,4 +81,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <%= ENV['DATABASE_URL'] %>
+  url: <%= ENV['DATABASE_URL'] %>
